--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -22,11 +22,20 @@ repositories {
 }
 
 dependencies {
+	// mariadb
+	implementation 'org.hibernate:hibernate-core:5.6.15.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
+
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+
+	// mattermost
+	implementation 'com.google.code.gson:gson:2.8.5'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
