:construction_worker: Chore : Swagger 설정 추가

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.profiles.active=set1
 
+# Swagger
+springdoc.use-fqn=true
+
 #---
 spring.config.activate.on-profile=set1
 server.port=8080
