--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
 
+	// ProgreSQL
+	runtimeOnly 'org.postgresql:postgresql'
+
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
 
