:construction_worker: Chore : ProgreSQL DB 연결

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,13 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
-spring.profiles.active=set1
+
+# ProgreSQL
+spring.second-datasource.url=jdbc:postgresql://localhost:5432/ditto
+spring.second-datasource.username=postgres
+spring.second-datasource.password=${password}
+spring.second-datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.second-datasource.jpa.hibernate.ddl-auto=update
 
 # Swagger
 springdoc.use-fqn=true
