:sparkles: Feat : CI/CD

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
+# nginx
+spring.profiles.active=set1
+
 # ProgreSQL
 spring.second-datasource.url=jdbc:postgresql://localhost:5432/ditto
 spring.second-datasource.username=postgres
