--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	// hibernate-spatial - jts Point쓰기 위해서 추가
 	implementation 'org.hibernate:hibernate-spatial:5.6.11.Final'
 
+	// query dsl
+	implementation 'com.querydsl:querydsl-jpa'
 
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
