✨ Feat : Mattermost 알림 연결

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,6 +21,12 @@ spring.second-datasource.jpa.hibernate.ddl-auto=create
 # Swagger
 springdoc.use-fqn=true
 
+# Mattermost
+notification.mattermost.enabled=true
+notification.mattermost.webhook-url=${webhook}
+notification.mattermost.color=red
+notification.mattermost.footer=Footer Text
+
 #---
 spring.config.activate.on-profile=set1
 server.port=8080
