--- a/social_login/backend/src/main/resources/application.properties
+++ b/social_login/backend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.security.oauth2.client.registration.kakao.client-authentication-method=cl
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
 
-# OAuth2 ????? ??? ??
+# OAuth2
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
@@ -25,7 +25,7 @@ spring.security.oauth2.provider.kakao.token-uri=https://kauth.kakao.com/oauth/to
 spring.security.oauth2.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.provider.kakao.user-name-attribute=id
 
-# JPA ??
+# JPA
 spring.jpa.show-sql=true
 
 # ?? ??
