--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,11 @@ dependencies {
 	// hibernate-spatial - jts Point쓰기 위해서 추가
 	implementation 'org.hibernate:hibernate-spatial:5.6.11.Final'
 
+	// index.html
+	implementation 'org.webjars:jquery:3.4.1'
+	implementation 'org.webjars:bootstrap:4.3.1'
+	implementation 'org.webjars:webjars-locator-core'
+
 	// query dsl
 	implementation 'com.querydsl:querydsl-jpa'
 
