:lipstick: Design: 전역폰트 설정

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "background_color": "#F8F7DA",
   "theme_color": "#8C383A",
-  "description": "PWA with Vite.js, React.js and TypeScript",
+  "description": "PWA with Vite.js, React.js and JavaScript",
   "icons": [
     {
       "src": "icons/favicon-512x512.png",
