:sparkles: Feat : 소셜로그인
Change-Id: I130906867e50a69c1d42c6a635664a106099747e

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,23 +8,22 @@ spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
-# OAuth2 ??
-spring.security.oauth2.client.registration.kakao.client-id= ${client_id}
-spring.security.oauth2.client.registration.kakao.client-secret= ${client_secret}
-spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
-spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
+# kakao ?? ???
+kakao.client.id=48fe0d040eac475f7b407702d4e3d9ca
+kakao.client.secret=Tw1eluHepyso7S7ZKixxwnrBgX4g8b1O
+kakao.redirect.url=http://localhost:8080/kakao/callback
 
-# OAuth2
-spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
-spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
-spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+# security ?? ???
+security.oauth2.client.registration.kakao.client-id=48fe0d040eac475f7b407702d4e3d9ca
+security.oauth2.client.registration.kakao.redirect-url=http://localhost:8080/kakao/callback
+security.oauth2.client.registration.kakao.client-authorization-method=POST
+security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+security.oauth2.client.registration.kakao.client-name=Kakao
 
-spring.security.oauth2.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-spring.security.oauth2.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
-spring.security.oauth2.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
-spring.security.oauth2.provider.kakao.user-name-attribute=id
+security.oauth2.client.provider.kakao.authorization-url=https://kauth.kakao.com/oauth/authorize
+security.oauth2.client.provider.kakao.token-url=https://kauth.kakao.com/oauth/token
+security.oauth2.client.provider.kakao.user-info-url=https://kapi.kakao.com/v2/user/me
+security.oauth2.client.provider.kakao.user-name-attribute=id
 
 # nginx
 spring.profiles.active=set1
