--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,11 +33,6 @@ dependencies {
 	// hibernate-spatial - jts Point쓰기 위해서 추가
 	implementation 'org.hibernate:hibernate-spatial:5.6.11.Final'
 
-	// index.html
-	implementation 'org.webjars:jquery:3.4.1'
-	implementation 'org.webjars:bootstrap:4.3.1'
-	implementation 'org.webjars:webjars-locator-core'
-
 	// query dsl
 	implementation 'com.querydsl:querydsl-jpa'
 
@@ -50,8 +45,15 @@ dependencies {
 	// health check
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-	// oauth2
+	//Json
+//	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+
+	// security + oauth2
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
