👷 Chore : properties 수정
Change-Id: I066a242faf1483497e9de298b16982630e6d060d

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,7 +28,7 @@ security.oauth2.client.provider.kakao.user-name-attribute=id
 # nginx
 spring.profiles.active=set1
 
-# ProgreSQL
+# PostgreSQL
 spring.second-datasource.url=jdbc:postgresql://localhost:5432/ditto
 spring.second-datasource.username=postgres
 spring.second-datasource.password=${password}
