--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -45,15 +45,12 @@ dependencies {
 	// health check
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-	//Json
-//	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
-
 	// security + oauth2
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	// thymeleaf
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	// json
+	implementation 'org.json:json:20210307'
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
