--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -45,12 +45,15 @@ dependencies {
 	// health check
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-	// security + oauth2
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	// security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	// json
 	implementation 'org.json:json:20210307'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
