👷 Chore : S3연결 설정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -31,6 +31,14 @@ notification.mattermost.webhook-url=${webhook}
 notification.mattermost.color=red
 notification.mattermost.footer=Footer Text
 
+# S3
+cloud.aws.s3.bucket=french-fries
+cloud.aws.stack.auto=false
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.credentials.accessKey=${S3access}
+cloud.aws.credentials.secretKey=${S3secret}
+
+
 #---
 spring.config.activate.on-profile=set1
 server.port=8080
