--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,6 +38,9 @@ cloud.aws.region.static=ap-northeast-2
 cloud.aws.credentials.accessKey=${S3access}
 cloud.aws.credentials.secretKey=${S3secret}
 
+# ????? ?? ??
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 #---
 spring.config.activate.on-profile=set1
