:sparkles: Feat : 채팅 기능 구현

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,6 +22,13 @@ spring.second-datasource.password=${password}
 spring.second-datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.second-datasource.jpa.hibernate.ddl-auto=create
 
+# redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.third-datasource.username=redis
+spring.third-datasource.password=${password}
+spring.third-datasource.jpa.hibernate.ddl-auto=create
+
 # Swagger
 springdoc.use-fqn=true
 
