--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
+    "react-masonry-component": "^6.3.0",
     "react-router-dom": "^6.17.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0"
