--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
-jwt.secret-key=${jwt-secret}
+jwt.secret-key=${jwtSecret}
 jwt.expiration=1000*60*60*24
 
 # nginx
