--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "browser-image-compression": "^2.0.2",
+    "image-compressor": "^2.0.3",
+    "image-size": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
