:sparkles: Feat : ddl create

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=${username}
 spring.datasource.password=${password}
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
@@ -27,7 +27,7 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.third-datasource.username=redis
 spring.third-datasource.password=${password}
-spring.third-datasource.jpa.hibernate.ddl-auto=update
+spring.third-datasource.jpa.hibernate.ddl-auto=create
 
 # Swagger
 springdoc.use-fqn=true
