--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -45,9 +45,12 @@ cloud.aws.region.static=ap-northeast-2
 cloud.aws.credentials.accessKey=${S3access}
 cloud.aws.credentials.secretKey=${S3secret}
 
-# ????? ?? ??
+# Image Upload size limit
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Time zone setting
+spring.jackson.time-zone=Asia/Seoul
 
 #---
 spring.config.activate.on-profile=set1
