--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -51,6 +51,7 @@ spring.servlet.multipart.max-request-size=10MB
 
 # Time zone setting
 spring.jackson.time-zone=Asia/Seoul
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 
 #---
 spring.config.activate.on-profile=set1
