:bug: Fix : query문 수정
Change-Id: I8708d7ac6699c61fa4c601e0d15c1730729af1b9

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=${username}
 spring.datasource.password=${password}
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
@@ -20,7 +20,7 @@ spring.second-datasource.url=jdbc:postgresql://localhost:5432/ditto
 spring.second-datasource.username=postgres
 spring.second-datasource.password=${password}
 spring.second-datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.second-datasource.jpa.hibernate.ddl-auto=create
+spring.second-datasource.jpa.hibernate.ddl-auto=update
 
 # redis
 spring.redis.host=localhost
