--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-masonry-component": "^6.3.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0"
