--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,47 +1,21 @@
 {
   "name": "동감(Ditto)",
   "short_name": "동감",
-  "start_url": "",
+  "start_url": "https://donggam.site",
   "display": "standalone",
   "background_color": "#E4EFFF",
   "theme_color": "#E4EFFF",
   "description": "위치 기반 SNS, 동감",
   "icons": [
     {
-      "src": "icons/android-icon-36x36.png",
-      "sizes": "36x36",
-      "type": "image/png",
-      "density": "0.75"
-     },
-     {
-      "src": "icons/android-icon-48x48.png",
-      "sizes": "48x48",
-      "type": "image/png",
-      "density": "1.0"
-     },
-     {
-      "src": "icons/android-icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "density": "1.5"
-     },
-     {
-      "src": "icons/android-icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "density": "2.0"
-     },
-     {
-      "src": "icons/android-icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "density": "3.0"
-     },
-     {
-      "src": "icons/android-icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "density": "4.0"
-     }
+      "src":"icons/android-chrome-192x192.png",
+      "sizes":"192x192",
+      "type":"image/png"
+    },
+    {
+      "src":"icons/android-chrome-512x512.png",
+      "sizes":"512x512",
+      "type":"image/png"
+    }
   ]
 }
