:construction_worker: Chore : manifest 수정
Change-Id: I4897b70ad6b57d27c42c23ea4a319c399249bf90

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "동감(Ditto)",
-  "short_name": "동감",
+  "short_name": "ditto",
   "start_url": "https://donggam.site",
   "display": "standalone",
   "background_color": "#E4EFFF",
