--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.17.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3"
   },
   "devDependencies": {
