--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "react-masonry-component": "^6.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3"
   },
