:sparkles: Feat : db connection pool

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
+# ??? ? ??
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+
 # JWT
 jwt.secret-key=${jwtSecret}
 jwt.expiration=1000*60*60*24
