:sparkles: Feat : db 커넥션 타임아웃 설정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,9 +9,10 @@ spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
-# ??? ? ??
+# jdbc ??
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=10000
 
 # JWT
 jwt.secret-key=${jwtSecret}
