✨ Feat : 회원별 firebaseToken 저장 추가

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -76,6 +76,9 @@ dependencies {
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	// firebase
+	implementation 'com.google.firebase:firebase-admin:9.1.1'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
