--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "image-size": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-lottie": "^1.2.3",
     "react-masonry-component": "^6.3.0",
     "react-responsive-carousel": "^3.2.23",
