--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=${username}
 spring.datasource.password=${password}
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
@@ -22,14 +22,15 @@ spring.second-datasource.url=jdbc:postgresql://localhost:5432/ditto
 spring.second-datasource.username=postgres
 spring.second-datasource.password=${password}
 spring.second-datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.second-datasource.jpa.hibernate.ddl-auto=update
+spring.second-datasource.jpa.hibernate.ddl-auto=create
 
 # redis
-spring.redis.host=k9e107.p.ssafy.io
+#spring.redis.host=k9e107.p.ssafy.io
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.third-datasource.username=redis
 spring.third-datasource.password=${password}
-spring.third-datasource.jpa.hibernate.ddl-auto=update
+spring.third-datasource.jpa.hibernate.ddl-auto=create
 
 # Swagger
 springdoc.use-fqn=true
