✨ Feat : DB 커넥션 설정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,10 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 # jdbc
-spring.datasource.hikari.connectionTimeout=30000
-spring.datasource.hikari.idleTimeout=600000
-spring.datasource.hikari.maxLifetime=1800000
-spring.datasource.hikari.maximumPoolSize=30
+#spring.datasource.hikari.connectionTimeout=30000
+#spring.datasource.hikari.idleTimeout=600000
+#spring.datasource.hikari.maxLifetime=1800000
+#spring.datasource.hikari.maximumPoolSize=10
 
 
 # JWT
