--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.hikari.connectionTimeout=30000
 #spring.datasource.hikari.idleTimeout=600000
 #spring.datasource.hikari.maxLifetime=1800000
-#spring.datasource.hikari.maximumPoolSize=10
+spring.datasource.hikari.maximumPoolSize=10
 
 
 # JWT
