✨ Feat : DB연결 설정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,14 +30,15 @@ spring.second-datasource.username=postgres
 spring.second-datasource.password=${password}
 spring.second-datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.second-datasource.jpa.hibernate.ddl-auto=update
+spring.second-datasource.hikari.maximumPoolSize=10
 
 # redis
 #spring.redis.host=k9e107.p.ssafy.io
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.third-datasource.username=redis
-spring.third-datasource.password=${password}
-spring.third-datasource.jpa.hibernate.ddl-auto=update
+#spring.third-datasource.username=redis
+#spring.third-datasource.password=${password}
+#spring.third-datasource.jpa.hibernate.ddl-auto=update
 
 # Swagger
 springdoc.use-fqn=true
