✨ Feat : 로그 레벨 수정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -66,6 +66,8 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 
 # Check Log
 logging.file.name=ditto.log
+logging.level.org.springframework=DEBUG
+logging.level.your.package.name=DEBUG
 
 #---
 spring.config.activate.on-profile=set1
