🐛 Fix : JDBC Connection 에러

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Mariadb
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://k9e107.p.ssafy.io:3306/ditto?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/ditto?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/ditto?characterEncoding=UTF-8
 #spring.datasource.url=jdbc:mariadb://k9e107a.p.ssafy.io:3306/ditto
 spring.datasource.username=${username}
 spring.datasource.password=${password}
@@ -32,7 +32,7 @@ spring.second-datasource.username=postgres
 spring.second-datasource.password=${password}
 spring.second-datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.second-datasource.jpa.hibernate.ddl-auto=update
-spring.second-datasource.hikari.maximumPoolSize=10
+#spring.second-datasource.hikari.maximumPoolSize=10
 
 # redis
 #spring.redis.host=k9e107.p.ssafy.io
@@ -69,7 +69,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 # Check Log
 logging.file.name=ditto.log
 logging.level.org.springframework=DEBUG
-logging.level.your.package.name=DEBUG
+logging.level.com.example.backend=DEBUG
 
 #---
 spring.config.activate.on-profile=set1
