--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -67,9 +67,9 @@ spring.jackson.time-zone=Asia/Seoul
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 
 # Check Log
-logging.file.name=ditto.log
-logging.level.org.springframework=DEBUG
-logging.level.com.example.backend=DEBUG
+#logging.file.name=ditto.log
+#logging.level.org.springframework=DEBUG
+#logging.level.com.example.backend=DEBUG
 
 #---
 spring.config.activate.on-profile=set1
