--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "recoil-persist": "^5.1.0",
     "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3"
+    "stompjs": "^2.3.3",
+    "vite-plugin-html": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
